# Vesper-Editor

./: CMakeLists.txt  README.md  main.cpp
assets/: VesperTheme.h
core/: AudioMixer.cpp  AudioMixer.h  ExportEngine.cpp  ExportEngine.h  MediaEngine.cpp  MediaEngine.h  ProjectManager.cpp  ProjectManager.h  Renderer.cpp  Renderer.h  Timeline.cpp  Timeline.h
ui/: ExportDialog.h & .cpp  MainWindow.cpp  MainWindow.h  MediaBrowser.cpp  MediaBrowser.h  PreviewPlayer.cpp  PreviewPlayer.h  PropertiesPanel.h & .cpp  TextEditor.h & .cpp  TimelineWidget.cpp  TimelineWidget.h  TransitionPanel.h & .cpp
